--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "hammerjs": "^2.0.8",
     "@agm/core": "^1.0.0-beta.6",
     "@angular/animations": "^7.2.13",
     "@angular/cdk": "^7.3.7",
@@ -25,7 +24,9 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "ngx-perfect-scrollbar": "^7.2.1",
+    "ngx-webstorage": "^3.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
